--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@
 	width: 50%;
 	float: left;
 }
+.live-sukubunga-wrapper .input-group .input-group-addon {
+	padding: 6px 10px 0px 6px;
+	height: 37px;
+}
 .modal-live-kalkulator {
 	font-family: 'Roboto'
 }
