--- a/css/style.css
+++ b/css/style.css
@@ -29,17 +29,18 @@
 .live-calculate a {
 	font-size: 16px;
 	color: #ffffff;
+
 }
 .live-calculate h3 {
 	color: #ffffff;
+	
 }
 .live-form .input-group-addon {
 	border-radius: 0;
 	border: 1px solid #d4d4d4;
 }
 .live-form .control-label {
-	font-size: 18px;
-	color: #000000;
+	font-size: 16px;
 }
 .live-form .form-control {
 	border: 1px solid #d4d4d4;
@@ -74,6 +75,7 @@
 }
 .btn-secondary {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #007cba;
+    border-color: #007cba;
+    
 }
